# blog

./: .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  CNAME  Makefile  README.rst  _quarto.yml  altair.qmd  datasets.qmd  index.html  index.qmd  listings.json  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: docs.yml
_site/: about.html  index.html  listings.json  search.json
_site/posts/logitech-issue/: index.html
_site/posts/polars-vs-pandas/: index.html
altair/: getting_started.qmd  interactive_regression.qmd
blog/: __init__.py  io.py
blog/utils/: logger.py
contents/: blog.html  blog.qmd  cv.html  cv.qmd  datasets.html  datasets.qmd  traffic.html  traffic.qmd
contents/posts/: interactive_regression.qmd  playground.html
contents/posts/analyzerunalyze/: main.html
contents/posts/distinct-colors/: distinct_colors.html  distinct_colors.ipynb
contents/posts/drafts/: dashboard.html
contents/posts/grammar-of-graphics/: main.qmd  (+1 more)
docs/: CNAME  about.html  altair.html  blog.html  datasets.html  index.html  listings.json  search.json
docs/altair/: getting_started.html  interactive_regression.html
docs/contents/: blog.html  datasets.html
docs/sections/: about.html  datasets.html
notebooks/: main.ipynb
posts/gradeinflation/: create_plot.py
posts/polars-vs-pandas/: index.qmd
posts/uncertainty/: main.qmd
posts/world-records/: records.qmd  visualization.html  world_records.qmd
sections/: about.qmd  datasets.qmd
site_libs/bootstrap/: bootstrap.min.css
tests/: __init__.py  test_blog.py
(+867 files in other folders)
