[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
alltime-athletics-python = "^0.16.0"
altair = "^5.0.1"
polars = "^0.18.0"
pyarrow = "^12.0.0"
pandas = "^2.0.2"
nbclient = "^0.8.0"
nbformat = "^5.9.0"
camminapy = "^1.1.0"
scipy = "^1.10.1"
vega-datasets = "^0.9.0"
black = "^23.3.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
graphviz = "^0.20.1"
pygwalker = "^0.1.11"
colour-science = "^0.4.2"
colorspacious = "^1.1.2"
bs4 = "^0.0.1"
plotly = "^5.17.0"
vl-convert-python = "^1.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
ruff = "^0.0.253"
black = "^23.1.0"
pyclean = "^2.2.0"
pre-commit = "^3.1.1"
ipykernel = "^6.16.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
rich = "^13.3.2"
regex = "^2023.5.5"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
  "D100",
  "D101",
  "D103",
  "D104",
  "D401",
  "E501",
]
line-length = 80
select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
